fixed logo's background for samsung internet browser's forced dark mode

--- a/src/TimeLine.css
+++ b/src/TimeLine.css
@@ -70,6 +70,7 @@
   justify-content: center;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
   opacity: 0;
+  overflow: hidden;
 }
 
 .left .timeline-logo{
@@ -81,9 +82,9 @@
 }
 
 .timeline-logo img {
-  width: 70%;
-  height: 70%;
-  object-fit: contain;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 /* Mobile support */
